--- a/rehab-app-backend/requirements.txt
+++ b/rehab-app-backend/requirements.txt
@@ -20,6 +20,7 @@ Jinja2==3.1.6
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+mediapipe==0.10.18
 ml_dtypes==0.5.1
 mpmath==1.3.0
 networkx==3.4.2
