--- a/rehab-app-backend/requirements.txt
+++ b/rehab-app-backend/requirements.txt
@@ -1,59 +1,14 @@
-absl-py==2.2.2
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-cffi==1.17.1
-click==8.1.8
-contourpy==1.3.2
-cycler==0.12.1
 fastapi==0.115.12
-filelock==3.18.0
-flatbuffers==25.2.10
-fonttools==4.57.0
-fsspec==2025.3.2
-h11==0.14.0
+gTTS==2.5.4
 httptools==0.6.4
-idna==3.10
-jax==0.6.0
-jaxlib==0.6.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.1
 mediapipe==0.10.18
-ml_dtypes==0.5.1
-mpmath==1.3.0
-networkx==3.4.2
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
-opt_einsum==3.4.0
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-protobuf==4.25.6
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
+pip==25.0
 python-dotenv==1.1.0
-pytz==2025.2
 PyYAML==6.0.2
-scipy==1.15.2
-sentencepiece==0.2.0
-setuptools==75.8.0
-six==1.17.0
-sniffio==1.3.1
-sounddevice==0.5.1
-starlette==0.46.2
-sympy==1.13.1
-torch==2.6.0
-tqdm==4.67.1
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
-uvicorn==0.34.1
+torchaudio==2.7.0
+torchvision==0.22.0
+uvicorn==0.34.2
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
